
set(LASZIP_API_C
    laszip_api.c
)


set(LASZIP_API_SOURCES
    ${LASZIP_API_C}
  )

LASZIP_ADD_LIBRARY(${LASZIP_API_LIB_NAME} ${LASZIP_API_SOURCES})

set_target_properties(${LASZIP_API_LIB_NAME} PROPERTIES VERSION "${LASZIP_BUILD_VERSION}"
    SOVERSION "${LASZIP_API_VERSION}"
    CLEAN_DIRECT_OUTPUT 1)

install(DIRECTORY "${LASZIP_HEADERS_DIR}/"
        DESTINATION "${LASZIP_INCLUDE_INSTALL_DIR}"
        PATTERN "/CMakeFiles/*" EXCLUDE
  )


