laszipdir = $(includedir)/laszip

laszip_HEADERS =		lasdefinitions.h \
						laspointreader.h \
						laspointreader0compressed.h \
						laspointreader1compressed.h \
						laspointreader2compressed.h \
						laspointwriter0compressed.h \
						laspointwriter1compressed.h \
						laspointwriter2compressed.h \
						laspointreader0raw.h \
						laspointreader1raw.h \
						laspointreader2raw.h \
						laspointwriter0raw.h \
						laspointwriter1raw.h \
						laspointwriter2raw.h \
						lasreader.h \
						laswriter.h 