laszipdir = $(includedir)/laszip

laszip_HEADERS =		lasdefinitions.h \
						laspointreader.h \
						laspointwriter.h \
						laspointreader0compressed.h \
						laspointreader1compressed.h \
						laspointreader2compressed.h \
						laspointreader3compressed.h \
						laspointwriter0compressed.h \
						laspointwriter1compressed.h \
						laspointwriter2compressed.h \
						laspointwriter3compressed.h \
						laspointreader0compressedarithmetic.h \
						laspointreader1compressedarithmetic.h \
						laspointreader2compressedarithmetic.h \
						laspointreader3compressedarithmetic.h \
						laspointwriter0compressedarithmetic.h \
						laspointwriter1compressedarithmetic.h \
						laspointwriter2compressedarithmetic.h \
						laspointwriter3compressedarithmetic.h \
						laspointreader0raw.h \
						laspointreader1raw.h \
						laspointreader2raw.h \
						laspointreader3raw.h \
						laspointwriter0raw.h \
						laspointwriter1raw.h \
						laspointwriter2raw.h \
						laspointwriter3raw.h \
						lasreader.h \
						laswriter.h 
