SUBDIRS = . 

AM_CPPFLAGS = -I../include -I../include/laszip
noinst_LTLIBRARIES = liblibrary.la 

liblibrary_la_SOURCES =				rangemodel.cpp \
						rangedecoder.cpp \
						rangeencoder.cpp \
						rangeintegercompressor.cpp \
						laspointreader0compressed.cpp \
						laspointreader1compressed.cpp \
						laspointreader2compressed.cpp \
						laspointreader3compressed.cpp \
						laspointwriter0compressed.cpp \
						laspointwriter1compressed.cpp \
						laspointwriter2compressed.cpp \
						laspointwriter3compressed.cpp \
						arithmeticmodel.cpp \
						arithmeticdecoder.cpp \
						arithmeticencoder.cpp \
						arithmeticintegercompressor.cpp \
						laspointreader0compressedarithmetic.cpp \
						laspointreader1compressedarithmetic.cpp \
						laspointreader2compressedarithmetic.cpp \
						laspointreader3compressedarithmetic.cpp \
						laspointwriter0compressedarithmetic.cpp \
						laspointwriter1compressedarithmetic.cpp \
						laspointwriter2compressedarithmetic.cpp \
						laspointwriter3compressedarithmetic.cpp \
						lasreader.cpp \
						laswriter.cpp
