SUBDIRS = . 

AM_CPPFLAGS = -I. -I../include -I../include/laszip
noinst_LTLIBRARIES = liblibrary.la 

liblibrary_la_SOURCES =				arithmeticmodel.cpp \
						arithmeticdecoder.cpp \
						arithmeticencoder.cpp \
						integercompressor.cpp \
						laswriteitemcompressed_v1.cpp \
						lasreaditemcompressed_v1.cpp \
						laswritepoint.cpp \
						lasreadpoint.cpp \
						laszipper.cpp \
						lasunzipper.cpp
