laszipdir = $(includedir)/

laszip_HEADERS =		lasdefinitions.hpp \
						laspointreader.hpp \
						laspointwriter.hpp \
						laspointreader0compressed.hpp \
						laspointreader1compressed.hpp \
						laspointreader2compressed.hpp \
						laspointreader3compressed.hpp \
						laspointwriter0compressed.hpp \
						laspointwriter1compressed.hpp \
						laspointwriter2compressed.hpp \
						laspointwriter3compressed.hpp \
						laspointreader0compressedarithmetic.hpp \
						laspointreader1compressedarithmetic.hpp \
						laspointreader2compressedarithmetic.hpp \
						laspointreader3compressedarithmetic.hpp \
						laspointwriter0compressedarithmetic.hpp \
						laspointwriter1compressedarithmetic.hpp \
						laspointwriter2compressedarithmetic.hpp \
						laspointwriter3compressedarithmetic.hpp \
						laspointreader0raw.hpp \
						laspointreader1raw.hpp \
						laspointreader2raw.hpp \
						laspointreader3raw.hpp \
						laspointwriter0raw.hpp \
						laspointwriter1raw.hpp \
						laspointwriter2raw.hpp \
						laspointwriter3raw.hpp \
						lasreader.hpp \
						laswriter.hpp 
