
AM_CPPFLAGS = -I../../include -I..

noinst_LTLIBRARIES = liblaszip_alternate.la
liblaszip_alternate_la_SOURCES =	arithmeticdecoder.cpp \
									arithmeticencoder.cpp \
									arithmeticmodel.cpp \
									integercompressor_newest.cpp \
									laspointreader0compressed.cpp \
									laspointreader1compressed.cpp \
									laspointreader2compressed.cpp \
									laspointwriter0compressed.cpp \
									laspointwriter1compressed.cpp \
									laspointwriter2compressed.cpp 